--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
-    "pg-pool": "^3.6.1"
+    "pg-pool": "^3.6.1",
+    "ws": "^8.13.0"
   }
 }
